add with-text flag (close #18)
