# docs/swagger.yaml
@@ -72,7 +72,7 @@ definitions:
           the result. Higher scores are better.
         example: 0.7505834773704542
         type: number
-      text:optional:
+      text:
         description: Text respresents the actual string that was used for matching
           by AI.
         type: string
@@ -139,6 +139,10 @@ paths:
         in: query
         name: score-threshold
         type: number
+      - description: Shows matched text in results
+        in: query
+        name: with-text
+        type: boolean
       produces:
       - application/json
       responses:
